@@ -1,3 +1,10 @@
+2013-10-03  James Hunt  <james.hunt@ubuntu.com>
+
+	* util/tests/test_utmp.c: Update remaining tests to pause
+	  between writing utmp(x) records and reading them back to allow
+	  tests to detect whether the expected new records have replaced
+	  the artificially created original ones (LP: #1089159).
+
 2013-10-02  James Hunt  <james.hunt@ubuntu.com>
 
 	* test/test_util_common.c:
